Fixed PlaneManagement and added SeatManagementException